--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
     "name": "Stephen Lake",
     "email": "stephen@closurecode.com"
   }],
+  "require": {
+    "guzzlehttp/guzzle": "^7.0",
+    "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
+  },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
     "orchestra/testbench": "~3.4.0|~3.5.0|~3.6.0"
